prometheus (#12)
* prometheus

* bump log4j

* use zgc

* application name